force-app/main/default/objects/custom_create324__c/custom_create324__c.object-meta.xml
<CustomObject>
    <label>Custom created object324</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects324</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>