force-app/main/default/objects/custom_create324__c/fields/custom_create_324field571__c.field-meta.xml
<CustomField>
    <fullName>custom_create_324field571__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 324field571</label>
    <type>Checkbox</type>
</CustomField>